Fix compilation issues in Field and Table classes